# ai_demo

./: .gitignore  AGENTS.md  README.md  app.py  main.py  mcp_server.py  pyproject.toml  tox.ini
.agent/skills/runbook/: SKILL.md
.agent/skills/testing/: SKILL.md
assets/: mermaid_demo.md
docs/: architecture.md  onboarding.md
tests/: .coveragerc  conftest.py  test_flask.py  test_mcp.py  test_utils.py
utils/: __init__.py  cli.py  logger.py
