[project]
name = "test-ai-docs"
version = "0.1.0"
description = "Boilerplate Flask app with FastMCP server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1",
    "fastmcp>=2.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-flask>=1.3",
    "httpx>=0.27",
]

[project.scripts]
start = "main:main"
