[project]
name = "ai_demo"
version = "0.1.0"
description = "Boilerplate Flask app with FastMCP server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1",
    "fastmcp>=2.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-flask>=1.3",
    "httpx>=0.27",
]
quality = [
    "ruff>=0.8.0",
    "tox>=4.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-flask>=1.3.0",
    "httpx>=0.27.0",
]

[project.scripts]
start = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["*.py"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".git",
    ".tox",
    ".venv",
    "venv",
    ".eggs",
    ".pytest_cache",
    "__pycache__",
    "build",
    "dist",
    "sandbox",
    "htmlcov",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501", # line length handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
